--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,15 @@ rebel.xml
 application-my.yaml
 
 /yudao-ui-app/unpackage/
+
+######
+node_modules
+.DS_Store
+dist
+dist-ssr
+/dist*
+*-lock.*
+pnpm-debug
+auto-*.d.ts
+.idea
+.history
