--- a/ui/yudao-ui-admin-vue3-master/package.json
+++ b/ui/yudao-ui-admin-vue3-master/package.json
@@ -31,6 +31,8 @@
     "@form-create/element-ui": "^3.1.24",
     "@iconify/iconify": "^3.1.1",
     "@videojs-player/vue": "^1.0.0",
+    "@vue/reactivity": "^3.4.31",
+    "@vue/shared": "^3.4.31",
     "@vueuse/core": "^10.9.0",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.10",
@@ -50,11 +52,14 @@
     "element-plus": "2.6.1",
     "fast-xml-parser": "^4.3.2",
     "highlight.js": "^11.9.0",
+    "html2canvas": "^1.4.1",
     "jsencrypt": "^3.3.2",
+    "jspdf": "^2.5.1",
     "lodash-es": "^4.17.21",
     "min-dash": "^4.1.1",
     "mitt": "^3.0.1",
     "nprogress": "^0.2.0",
+    "pdfjs-dist": "^4.4.168",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "qrcode": "^1.5.3",
@@ -84,8 +89,8 @@
     "@types/qs": "^6.9.12",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
-    "@unocss/transformer-variant-group": "^0.58.5",
     "@unocss/eslint-config": "^0.57.4",
+    "@unocss/transformer-variant-group": "^0.58.5",
     "@vitejs/plugin-legacy": "^5.3.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
