--- a/yudao-module-bus/yudao-module-bus-biz/pom.xml
+++ b/yudao-module-bus/yudao-module-bus-biz/pom.xml
@@ -36,12 +36,7 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.9</version>
         </dependency>
-<!--        mongodb-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-            <version>3.3.1</version>
-        </dependency>
+
         <!-- 添加POI Excel依赖 -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -93,6 +88,13 @@
         <dependency>
             <groupId>cn.iocoder.boot</groupId>
             <artifactId>yudao-spring-boot-starter-mybatis</artifactId>
+        </dependency>
+
+<!--        sqlserver-->
+        <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>8.4.1.jre8</version>
         </dependency>
 
         <dependency>
