--- a/ui/yudao-ui-admin-vue3-master/.env.local
+++ b/ui/yudao-ui-admin-vue3-master/.env.local
@@ -4,12 +4,12 @@ NODE_ENV=development
 VITE_DEV=true
 
 # 请求路径
-VITE_BASE_URL='http://localhost:48088'
+VITE_BASE_URL='http://192.168.1.13:48088'
 
 # 文件上传类型：server - 后端上传， client - 前端直连上传，仅支持 S3 服务
 VITE_UPLOAD_TYPE=server
 # 上传路径
-VITE_UPLOAD_URL='http://localhost:48088/admin-api/bus/file-upload'
+VITE_UPLOAD_URL='http://192.168.1.13:48088/admin-api/bus/file-upload'
 
 # 接口地址
 VITE_API_URL=/admin-api
