--- a/yudao-server/src/main/resources/application-local.yaml
+++ b/yudao-server/src/main/resources/application-local.yaml
@@ -55,7 +55,7 @@ spring:
           #url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ruoyi-bus;SelectMethod=cursor;encrypt=false;rewriteBatchedStatements=true;useUnicode=true;characterEncoding=utf-8 # SQLServer 连接的示例
           #          url: jdbc:dm://127.0.0.1:5236?schema=RUOYI_VUE_PRO # DM 连接的示例
           url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ruoyi-bus;SelectMethod=cursor;encrypt=false;rewriteBatchedStatements=true;useUnicode=true;characterEncoding=utf-8 # SQLServer 连接的示例
-
+#          driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
           username: sa
           password: 123456
         #          username: sa # SQL Server 连接的示例
