--- a/yudao-server/src/main/resources/application-local.yaml
+++ b/yudao-server/src/main/resources/application-local.yaml
@@ -54,10 +54,11 @@ spring:
           #          url: jdbc:oracle:thin:@127.0.0.1:1521:xe # Oracle 连接的示例
           #url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ruoyi-bus;SelectMethod=cursor;encrypt=false;rewriteBatchedStatements=true;useUnicode=true;characterEncoding=utf-8 # SQLServer 连接的示例
           #          url: jdbc:dm://127.0.0.1:5236?schema=RUOYI_VUE_PRO # DM 连接的示例
-          url: jdbc:sqlserver://127.0.0.1:1433;DatabaseName=ruoyi-bus;SelectMethod=cursor;encrypt=false;rewriteBatchedStatements=true;useUnicode=true;characterEncoding=utf-8 # SQLServer 连接的示例
-#          driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-          username: sa
-          password: 123456
+          lazy: true # 开启懒加载，保证启动速度
+          driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+          url: jdbc:sqlserver://10.109.73.13:1433;databaseName=ruoyi-bus;encrypt=true;trustServerCertificate=true; # SQLServer 连接的示例
+          username: SYS_PROFOLE6
+          password: Cxrmghgws333#
         #          username: sa # SQL Server 连接的示例
         #          password: Yudao@2024 # SQL Server 连接的示例
         #          username: SYSDBA # DM 连接的示例
